--- a/src/app/components/proprietari/proprietariTable/proprietari.component.html
+++ b/src/app/components/proprietari/proprietariTable/proprietari.component.html
@@ -4,7 +4,7 @@
   <table class="table table-bordered table-dark table-striped table-hover m-5">
     <thead>
     <tr>
-      <th scope="col">id</th>
+      <th scope="col">azioni</th>
       <th scope="col">nome</th>
       <th scope="col">cognome</th>
       <th scope="col">Tot Immobili</th>
@@ -15,7 +15,7 @@
         <tr>
           <th scope="row" class="d-flex justify-content-evenly">
             <button class="btn btn-warning rounded-circle" (click)="openDialogUpdate(prop)"><i class="fa-solid fa-pen-nib" style="color: #000000;"></i></button>
-            <button class="btn btn-danger rounded-circle" (click)="deleteAnnesso(prop.id!)"><i class="fa-solid fa-trash" style="color: #000000;"></i></button>
+            <button class="btn btn-danger rounded-circle" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="selectProp(prop)" ><i class="fa-solid fa-trash" style="color: #000000;"></i></button>
 
           </th>
           <td>{{prop.nome}}</td>
@@ -31,8 +31,31 @@
 
 </div>
 
+<!--//modale conferma delete-->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-dark">
+        confermi di voler eliminare questo proprietario?
+        <ul>
+          <p class="m-0 mt-3"><small>nome</small></p>
+          <li>{{selectedProp?.nome }}</li>
+          <p class="m-0 mt-3"><small>cognome</small></p>
+          <li>{{selectedProp?.cognome }}</li>
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="deleteProp(selectedProp!.id!)">Elimina</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-
-<app-immobile-dialog #customDialog></app-immobile-dialog>
+<app-immobile-dialog ></app-immobile-dialog>
 
 <app-proprietario-update-form [proprietario]="selectedProp"></app-proprietario-update-form>
