--- a/src/app/components/annessi/annessi-form/annessi-form.component.html
+++ b/src/app/components/annessi/annessi-form/annessi-form.component.html
@@ -7,35 +7,44 @@
     <select id="tipo" type="select" formControlName="tipo">
       <option value="" disabled selected>Scegli un tipo...</option>
 
-      <option *ngFor="let option of annessiOptions" [ngValue]="option.value">
+      <option *ngFor="let option of annessiOptions" [value]="option.value">
         {{ option.label }}
       </option>
 
     </select>
-    <div *ngIf="annessiForm.get('tipo')?.invalid ">
-      Tipo è obbligatorio.
+    <div class="error" *ngIf="!isValid && annessiForm.get('tipo')?.invalid  ">
+    Tipo è obbligatorio.
     </div>
   </div>
   <div>
+    <!--    <label for="superficie">Superficie:</label>-->
+    <!--    <input id="superficie" type="text" formControlName="superficie" appSquareMeters>-->
+    <!--    <div *ngIf="annessiForm.get('superficie')?.invalid && annessiForm.get('superficie')?.touched">-->
+    <!--      Inserisci una superficie.-->
+    <!--    </div>-->
+
     <label for="superficie">Superficie:</label>
-    <input id="superficie" type="number" formControlName="superficie">
-    <div *ngIf="annessiForm.get('superficie')?.invalid && annessiForm.get('superficie')?.touched">
-      Inserisci una superficie.
+    <div class="position-relative">
+      <input id="superficie" class="styleInputText" type="number" formControlName="superficie">
+      <span class="euro-symbol">m²</span>
+    </div>
+    <div class="error" *ngIf="!isValid && annessiForm.get('superficie')?.invalid  ">
+      superficie è obbligatorio.
     </div>
   </div>
   <div>
     <label for="immobileDTO">immobile: <small> (facoltativo)</small></label>
     <select id="immobileDTO" type="select" formControlName="immobileDTO">
-      <option [value]="null" disabled selected>Scegli un Immobile...</option>
+      <option [value]="null" disabled selected hidden>Scegli un Immobile...</option>
       <option *ngFor="let immobile of listaImmobili" [value]="serializeImmobile(immobile)">
-        {{immobile.tipo}} | prop : {{immobile.proprietariDTO ? immobile.proprietariDTO.cognome : 'ND' }}
+        {{ immobile.tipo }} | prop : {{ immobile.proprietariDTO ? immobile.proprietariDTO.cognome : 'ND' }}
       </option>
     </select>
 
-    </div>
+  </div>
   <div class="d-flex justify-content-evenly ">
-    <button type="submit" [disabled]="annessiForm.invalid">iniva</button>
-    <button routerLink="/annessiTable">torna alla lista annessi </button>
+    <button type="submit" >iniva</button>
+    <button routerLink="/annessiTable">indietro</button>
   </div>
 
 
