--- a/src/app/components/annessi/annessi-update-form/annessi-update-form.component.css
+++ b/src/app/components/annessi/annessi-update-form/annessi-update-form.component.css
@@ -89,6 +89,24 @@ button:disabled {
   color: red;
   font-size: 0.8em;
 }
+.bg-error {
+  background-color: rgba(255, 99, 99, 0.75);
+  border: 1px solid red;
+  border-radius: 5px;
+  z-index:100;
+}
 .pointer-cursor {
   cursor: pointer;
+}
+.position-relative {
+  position: relative;
+}
+
+.euro-symbol {
+  position: absolute;
+  top: 50%;
+  right: 10px; /* Puoi regolare questa distanza in base alle tue necessità */
+  transform: translateY(-50%);
+  pointer-events: none; /* Impedisce che il simbolo interferisca con l'input */
+  font-size: 1.2em; /* Puoi regolare la dimensione del simbolo in base alle tue necessità */
 }
