--- a/src/app/components/immobli/immobile-update-form/immobile-update-form.component.css
+++ b/src/app/components/immobli/immobile-update-form/immobile-update-form.component.css
@@ -63,8 +63,9 @@ label {
 .box-over-flow {
   max-height: 250px;
   border: 1px solid #CCCCCC;
-  border-radius: 5px;
+
   overflow: auto;
+  width: 100%;
 }
 select{
   border: 1px solid #CCCCCC;
@@ -100,4 +101,16 @@ button:disabled {
 }
 .pointer-cursor {
   cursor: pointer;
+}
+.position-relative {
+  position: relative;
+}
+
+.euro-symbol {
+  position: absolute;
+  top: 50%;
+  right: 10px; /* Puoi regolare questa distanza in base alle tue necessità */
+  transform: translateY(-50%);
+  pointer-events: none; /* Impedisce che il simbolo interferisca con l'input */
+  font-size: 1.2em; /* Puoi regolare la dimensione del simbolo in base alle tue necessità */
 }
