--- a/src/app/components/immobli/immobili-form/immobili-form.component.css
+++ b/src/app/components/immobli/immobili-form/immobili-form.component.css
@@ -37,8 +37,9 @@ label {
 .box-over-flow {
   max-height: 250px;
   border: 1px solid #CCCCCC;
-  border-radius: 5px;
   overflow: auto;
+  width: 100%;
+
 }
 select{
   border: 1px solid #CCCCCC;
@@ -75,61 +76,15 @@ button:disabled {
 .pointer-cursor {
   cursor: pointer;
 }
-/*form {*/
-/*  width:100%;*/
-/*  max-width: 400px;*/
-/*  margin: auto;*/
-/*  padding: 1em;*/
-/*  border: 1px solid #ccc;*/
-/*  border-radius: 1em;*/
-/*}*/
+.position-relative {
+  position: relative;
+}
 
-/*div {*/
-/*  margin-bottom: 1em;*/
-/*}*/
-
-/*label {*/
-/*  margin-bottom: .5em;*/
-/*  color: #333333;*/
-/*  display: block;*/
-/*}*/
-
-/*input {*/
-/*  border: 1px solid #CCCCCC;*/
-/*  padding: .5em;*/
-/*  font-size: 1em;*/
-/*  width: 100%;*/
-/*  box-sizing: border-box;*/
-/*}*/
-/*select{*/
-/*  border: 1px solid #CCCCCC;*/
-/*  padding: .5em;*/
-/*  font-size: 1em;*/
-/*  width: 100%;*/
-/*  box-sizing: border-box;*/
-/*}*/
-/*option {*/
-/*  border: 1px solid #CCCCCC;*/
-/*  padding: .5em;*/
-/*  font-size: 1em;*/
-/*  width: 100%;*/
-/*  box-sizing: border-box;*/
-/*}*/
-
-/*button {*/
-/*  padding: 0.7em;*/
-/*  color: #fff;*/
-/*  background-color: #007BFF;*/
-/*  border: none;*/
-/*  border-radius: 5px;*/
-/*  cursor: pointer;*/
-/*}*/
-
-/*button:disabled {*/
-/*  background-color: #CCCCCC;*/
-/*}*/
-
-/*.error {*/
-/*  color: red;*/
-/*  font-size: 0.8em;*/
-/*}*/
+.euro-symbol {
+  position: absolute;
+  top: 50%;
+  right: 10px; /* Puoi regolare questa distanza in base alle tue necessità */
+  transform: translateY(-50%);
+  pointer-events: none; /* Impedisce che il simbolo interferisca con l'input */
+  font-size: 1.2em; /* Puoi regolare la dimensione del simbolo in base alle tue necessità */
+}
