--- a/src/app/components/proprietari/proprietari-form/proprietari-form.component.html
+++ b/src/app/components/proprietari/proprietari-form/proprietari-form.component.html
@@ -3,14 +3,14 @@
   <div>
     <label for="nome">Nome:</label>
     <input id="nome" class="styleInputText" type="text" formControlName="nome">
-    <div *ngIf="proprietariForm.get('nome')?.invalid && proprietariForm.get('nome')?.touched">
+    <div class="error" *ngIf="!isValid && proprietariForm.get('nome')?.invalid ">
       Nome è obbligatorio.
     </div>
   </div>
   <div>
     <label for="cognome">Cognome:</label>
     <input id="cognome"  class="styleInputText" type="text" formControlName="cognome">
-    <div *ngIf="proprietariForm.get('cognome')?.invalid && proprietariForm.get('cognome')?.touched">
+    <div class="error" *ngIf="!isValid && proprietariForm.get('cognome')?.invalid ">
       Cognome è obbligatorio.
 
     </div>
@@ -28,8 +28,8 @@
       </div>
     </div>
     <div class="d-flex flex-row justify-content-evenly">
-      <button type="submit" [disabled]="proprietariForm.invalid">iniva</button>
-      <button routerLink="/proprietariTable">torna alla lista proprietari</button>
+      <button type="submit">iniva</button>
+      <button routerLink="/proprietariTable">indietro</button>
     </div>
   </div>
 </form>
