--- a/src/app/components/proprietari/proprietario-update-form/proprietario-update-form.component.html
+++ b/src/app/components/proprietari/proprietario-update-form/proprietario-update-form.component.html
@@ -5,14 +5,14 @@
     <div>
       <label for="nome">Nome:</label>
       <input class="styleInputText" id="nome" type="text" formControlName="nome">
-      <div *ngIf="propUpdateForm.get('nome')?.invalid && propUpdateForm.get('nome')?.touched">
+      <div class="error" *ngIf="!isValid && propUpdateForm.get('nome')?.invalid ">
         Nome è obbligatorio.
       </div>
     </div>
     <div>
       <label for="cognome">Cognome:</label>
       <input class="styleInputText" id="cognome" type="text" formControlName="cognome">
-      <div *ngIf="propUpdateForm.get('cognome')?.invalid && propUpdateForm.get('cognome')?.touched">
+      <div class="error" *ngIf="!isValid && propUpdateForm.get('cognome')?.invalid">
         cognome è obbligatorio.
       </div>
     </div>
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="d-flex flex-row justify-content-evenly">
-    <button type="submit" [disabled]="propUpdateForm.invalid">Modifica</button>
+    <button type="submit">Modifica</button>
     <button type="button" (click)="onClose()">Chiudi </button>
     </div>
   </form>
